Fixed typos and added caveat about co-occurrence triads

--- a/signatories_doc/signatories.tex
+++ b/signatories_doc/signatories.tex
@@ -90,7 +90,7 @@ u_{ij} =
 
 A binary-valued matrix describes an undirected bipartite graph where members of one set are connected to members of the other set, but where within-set connections do not exist. \newline
 
-A graph of the agreement-actor matrix of the Bosnia peace process is show in Figure 1 of Appendix A.1.\newline
+A graph of the agreement-actor matrix of the Bosnia peace process is shown in Figure 1 of Appendix A.1.\newline
 
 A graph can be queried using depth-first search to show only the network of relations between a combination of selected actors and/or agreements. A search can be run against the binary matrix or against the graph if search is supported by the graph package. \newline
 
@@ -168,7 +168,7 @@ n =
 
 \subsection{Graphs}
 
-An actor co-occurrence matrix can be represented as a graph where vertices are actors connected by edges with a weight given by the number of agreements to which the actors are co-signatories.  The graph can be used to explore actor-actor relationships within a peace process including the existence of disjoint subgraphs and triadic closures. See Figure 3 in Appendix A.3 for an example from the Bosnia peace process. \newline
+An actor co-occurrence matrix can be represented as a graph where vertices are actors connected by edges with a weight given by the number of agreements to which the actors are co-signatories.  The graph can be used to explore actor-actor relationships within a peace process including the existence of disjoint subgraphs and triadic closures. The interpretation of triads is being investigated. See Figure 3 in Appendix A.3 for an example from the Bosnia peace process. \newline
 
 
 \section{Process-Actor Matrix}
