--- a/signatories_doc/signatories.tex
+++ b/signatories_doc/signatories.tex
@@ -168,7 +168,7 @@ n =
 
 \subsection{Graphs}
 
-An actor co-occurrence matrix can be represented as a graph where vertices are actors connected by edges with a weight given by the number of agreements to which the actors are co-signatories.  The graph can be used to explore actor-actor relationships within a peace process including the existence of disjoint subgraphs and triadic closures. The interpretation of triads is being investigated. See Figure 3 in Appendix A.3 for an example from the Bosnia peace process. \newline
+An actor co-occurrence matrix can be represented as a graph where vertices are actors connected by edges with a weight given by the number of agreements to which the actors are co-signatories.  The graph can be used to explore actor-actor relationships within a peace process including the existence of disjoint subgraphs. The interpretation of the graphical representation is being investigated. See Figure 3 in Appendix A.3 for an example from the Bosnia peace process. \newline
 
 
 \section{Process-Actor Matrix}
@@ -241,7 +241,7 @@ c_{ij} =
 \begin{center}
 \includegraphics[scale=0.50]{./assets/bosnia_actors.png}
 \end{center}
-\caption{A graph of the actor co-occurrence matrix from the Bosnia peace process. To qualify for inclusion in the graph a pair of actors must be co-signatories to 13 or more agreements. Two disjoint subgraphs are visible each of which contains a triadic closure. Vertex colour codes for actor type: blue = countries,  purple = IGO, green = armed group.}
+\caption{A graph of the actor co-occurrence matrix from the Bosnia peace process. To qualify for inclusion in the graph a pair of actors must be co-signatories to 13 or more agreements. Two disjoint subgraphs are visible. Vertex colour codes for actor type: blue = countries,  purple = IGO, green = armed group.}
 \end{figure}
 
 \end{document}
