--- a/signatories_streamlit.ipynb
+++ b/signatories_streamlit.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "# Streamlit app dev and test\n",
-    "\n"
+    "\n",
+    "Work through code for the streamlist app"
    ]
   },
   {
