--- a/signatories_streamlit.ipynb
+++ b/signatories_streamlit.ipynb
@@ -819,17 +819,54 @@
    "source": []
   },
   {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['CON_603', 'IGO_50', 'CON_7', 'CON_441', 'CON_82', 'IGO_355', 'CON_21', 'IGO_639', 'CON_20', 'CON_2', 'CON_19', 'CON_637', 'IGO_65', 'NGO_201', 'CON_294', 'ARM_1091', 'CON_1', 'CON_4', 'CON_12', 'IGO_638', 'IGO_5', 'CON_10', 'IGO_406', 'CON_592', 'CON_587', 'CON_562', 'CON_78', 'POL_833', 'CON_589', 'CON_611', 'CON_604', 'CON_602', 'CON_3', 'IGO_437', 'CON_0', 'CON_22', 'CON_606', 'CON_11', 'IGO_436', 'CON_395', 'ARM_313', 'CON_81', 'CON_14', 'CON_259', 'CON_169', 'CON_588', 'CON_202', 'CON_636', 'CON_419', 'CON_228', 'CON_394', 'CON_171', 'CON_610', 'CON_348', 'IGO_49', 'IGO_640', 'CON_52', 'CON_139', 'CON_593', 'IGO_438']\n",
+      "['ARM_460', 'IGO_355', 'ARM_1091', 'CON_4', 'IGO_5', 'MIL_796', 'CON_604', 'IGO_421', 'CON_0', 'ARM_313', 'IGO_49', 'OTH_837']\n",
+      "{'IGO_355', 'ARM_1091', 'CON_4', 'IGO_5', 'IGO_49', 'ARM_313', 'CON_0', 'CON_604'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_consignatories(actor_id,pp_data_dict):\n",
+    "    co_matrices = get_cooccurrence_matrices(pp_data_dict['pp_matrix'])\n",
+    "    actor_index = pp_data_dict['pp_actor_ids'].index(actor_id)\n",
+    "    cosign_ids = [pp_data_dict['pp_actor_ids'][i] for i,v in enumerate(co_matrices[0][actor_index]) if v > 0]\n",
+    "    return cosign_ids\n",
+    "    \n",
+    "cosigns1 = get_consignatories('CON_1',pp_data_dict)\n",
+    "print(cosigns1)    \n",
+    "cosigns2 = get_consignatories('ARM_460',pp_data_dict)\n",
+    "print(cosigns2)    \n",
+    "\n",
+    "print(set(cosigns1).intersection(cosigns2))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Paths of length 4 \n",
     "\n",
-    "Bipartite equivalent of friend-of-afriend"
+    "Bipartite equivalent of friend-of-a-friend. A path 4 between two actors who are not cosignatories, means there's another actor who is a cosignatory to the agreements of both actors. Therefore the mediating actor is a cosignatory with both path 4 actors, i.e., the intersection of the actor cosignatory sets.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +886,12 @@
      "output_type": "stream",
      "text": [
       "374\n",
-      "[('ARM_460', 'Croatian Republic of Herzeg-Bosnia'), ('CON_1', 'Croatia')]\n"
+      "[('ARM_460', 'Croatian Republic of Herzeg-Bosnia'), ('CON_1', 'Croatia')]\n",
+      "['ARM_1091', 'ARM_313', 'CON_0', 'CON_1', 'CON_10', 'CON_11', 'CON_12', 'CON_139', 'CON_14', 'CON_169', 'CON_171', 'CON_19', 'CON_2', 'CON_20', 'CON_202', 'CON_21', 'CON_22', 'CON_228', 'CON_259', 'CON_294', 'CON_3', 'CON_348', 'CON_394', 'CON_395', 'CON_4', 'CON_419', 'CON_441', 'CON_52', 'CON_562', 'CON_587', 'CON_588', 'CON_589', 'CON_592', 'CON_593', 'CON_602', 'CON_603', 'CON_604', 'CON_606', 'CON_610', 'CON_611', 'CON_636', 'CON_637', 'CON_7', 'CON_78', 'CON_81', 'CON_82', 'IGO_355', 'IGO_406', 'IGO_436', 'IGO_437', 'IGO_438', 'IGO_49', 'IGO_5', 'IGO_50', 'IGO_638', 'IGO_639', 'IGO_640', 'IGO_65', 'NGO_201', 'POL_833']\n",
+      "\n",
+      "['ARM_1091', 'ARM_313', 'ARM_460', 'CON_0', 'CON_4', 'CON_604', 'IGO_355', 'IGO_421', 'IGO_49', 'IGO_5', 'MIL_796', 'OTH_837']\n",
+      "\n",
+      "['ARM_1091', 'ARM_313', 'CON_0', 'CON_4', 'CON_604', 'IGO_355', 'IGO_49', 'IGO_5']\n"
      ]
     }
    ],
@@ -863,6 +905,7 @@
     "actor_4_paths[actor_4_paths != 0] = 1\n",
     "\n",
     "co_matrices = get_cooccurrence_matrices(pp_data_dict['pp_matrix'])\n",
+    "# Remove all actors with a path 2 \n",
     "U = np.linalg.matrix_power(co_matrices[0],2) * np.bitwise_xor(actor_2_paths,actor_4_paths)\n",
     "\n",
     "upper = np.triu(U,k=1)\n",
@@ -875,7 +918,17 @@
     "actor_indices = np.unravel_index(np.argmax(upper,axis=None),upper.shape)\n",
     "actors = [(pp_data_dict['pp_actor_ids'][index],\\\n",
     "           data_dict['vertices_dict'][pp_data_dict['pp_actor_ids'][index]][5]) for index in actor_indices]\n",
-    "print(actors)\n"
+    "print(actors)\n",
+    "\n",
+    "cosigns1 = get_consignatories('CON_1',pp_data_dict)\n",
+    "print(sorted(cosigns1))\n",
+    "print()\n",
+    "\n",
+    "cosigns2 = get_consignatories('ARM_460',pp_data_dict)\n",
+    "print(sorted(cosigns2))\n",
+    "print()\n",
+    "\n",
+    "print(sorted(list(set(cosigns1).intersection(cosigns2))))\n"
    ]
   },
   {
