Added new functiona

--- a/signatories_streamlit.ipynb
+++ b/signatories_streamlit.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,133 @@
     "    data_dict['color_map'] = color_map\n",
     "    data_dict['matrix'] = matrix\n",
     "\n",
-    "    return data_dict\n"
+    "    return data_dict\n",
+    "\n",
+    "def get_agreement_cosignatories(agreement_ids,pp_data_dict):\n",
+    "    \"\"\"\n",
+    "    Given a list of agreements get the signatories in common\n",
+    "    Works within a peace process only\n",
+    "    param agreement_ids: List of agreement IDs\n",
+    "    param pp_data_dict: Peace process data dictionary\n",
+    "    return: List of actor IDs who a signatories to all the agreements in agreement_ids\n",
+    "    \"\"\"\n",
+    "    if len(agreement_ids) < 2:        \n",
+    "        return []\n",
+    "    for agreement_id in agreement_ids:\n",
+    "        if not agreement_id in pp_data_dict['pp_agreement_ids']:\n",
+    "            return []\n",
+    "    agreement_indices = [pp_data_dict['pp_agreement_ids'].index(agreement_id) for\\\n",
+    "                         agreement_id in agreement_ids]\n",
+    "    for i,agreement_index in enumerate(agreement_indices):\n",
+    "        row = pp_data_dict['pp_matrix'][agreement_index]\n",
+    "        if i == 0:\n",
+    "            actors_bitset = row\n",
+    "        else:\n",
+    "            actors_bitset = np.bitwise_and(actors_bitset,row)\n",
+    "    actor_ids = []\n",
+    "    for index,value in enumerate(actors_bitset): \n",
+    "        if value == 1:\n",
+    "            actor_ids.append(pp_data_dict['pp_actor_ids'][index])\n",
+    "    return actor_ids\n",
+    "\n",
+    "def get_consignatory_agreements(actor_ids,pp_data_dict):\n",
+    "    \"\"\"\n",
+    "    Given a list of actors get the agreements in common\n",
+    "    Works within a peace process only\n",
+    "    param actor_ids: List of actor IDs\n",
+    "    param pp_data_dict: Peace process data dictionary\n",
+    "    return: List of agreements to which the actors in actor_ids are cosignatories\n",
+    "    \"\"\"\n",
+    "    # Given a list of actors get the agreements in common\n",
+    "    if len(actor_ids) < 2:        \n",
+    "        return []\n",
+    "    for actor_id in actor_ids:\n",
+    "        if not actor_id in pp_data_dict['pp_actor_ids']:\n",
+    "            return []\n",
+    "    actor_indices = [pp_data_dict['pp_actor_ids'].index(actor_id) for actor_id in actor_ids]\n",
+    "    for i,actor_index in enumerate(actor_indices):\n",
+    "        row = pp_data_dict['pp_matrix'].T[actor_index]\n",
+    "        if i == 0:\n",
+    "            agreements_bitset = row\n",
+    "        else:\n",
+    "            agreements_bitset = np.bitwise_and(agreements_bitset,row)\n",
+    "    agreement_ids = []\n",
+    "    for index,value in enumerate(agreements_bitset): \n",
+    "        if value == 1:\n",
+    "            agreement_ids.append(pp_data_dict['pp_agreement_ids'][index])\n",
+    "    return agreement_ids\n",
+    "\n",
+    "def get_consignatories(actor_id,pp_data_dict):\n",
+    "    \"\"\"\n",
+    "    Get the cosignatories of an actor\n",
+    "    Works within a peace process only\n",
+    "    param actor_id: Actor ID\n",
+    "    param pp_data_dict: Peace process data dictionary\n",
+    "    return: List of actors who are cosignatories with the actor in actor_id\n",
+    "    \"\"\"\n",
+    "    co_matrices = get_cooccurrence_matrices(pp_data_dict['pp_matrix'])\n",
+    "    actor_index = pp_data_dict['pp_actor_ids'].index(actor_id)\n",
+    "    cosign_ids = [pp_data_dict['pp_actor_ids'][i] for i,v in enumerate(co_matrices[0][actor_index]) if v > 0]\n",
+    "    return cosign_ids\n",
+    "\n",
+    "def get_coagreements(agreement_id,pp_data_dict):\n",
+    "    \"\"\"\n",
+    "    Get the coagreements of an agreement, i.e., the agreements that have signatories in \n",
+    "    common with the agreement in agreement_id\n",
+    "    Works within a peace process only\n",
+    "    param agreement_id: agreement ID\n",
+    "    param pp_data_dict: Peace process data dictionary\n",
+    "    return: List of agreements with actors in common with the agreement in agreement_id\n",
+    "    \"\"\"\n",
+    "    co_matrices = get_cooccurrence_matrices(pp_data_dict['pp_matrix'])\n",
+    "    agreement_index = pp_data_dict['pp_agreement_ids'].index(agreement_id)\n",
+    "    coagree_ids = [pp_data_dict['pp_agreement_ids'][i] for\\\n",
+    "                   i,v in enumerate(co_matrices[1][agreement_index]) if v > 0]\n",
+    "    return coagree_ids\n",
+    "\n",
+    "def get_agreements(actor_id,pp_data_dict):\n",
+    "    \"\"\"\n",
+    "    Get the agreements to which an actor is a signatory\n",
+    "    Works within a peace process only\n",
+    "    param actor_id: Actor ID\n",
+    "    param pp_data_dict: Peace process data dictionary\n",
+    "    return: List of agreements to which the actor in actor_id is a signatory\n",
+    "    \"\"\"\n",
+    "    actor_index = pp_data_dict['pp_actor_ids'].index(actor_id)\n",
+    "    agreement_ids = [pp_data_dict['pp_agreement_ids'][i] for\\\n",
+    "                     i,v in enumerate(pp_data_dict['pp_matrix'][:,actor_index]) if v > 0]\n",
+    "    return agreement_ids\n",
+    "\n",
+    "def get_actors(agreement_id,pp_data_dict):\n",
+    "    \"\"\"\n",
+    "    Get the actors who are signatories to the agreement in agreement_id\n",
+    "    Works within a peace process only\n",
+    "    param agreement_id: agreement ID\n",
+    "    param pp_data_dict: Peace process data dictionary\n",
+    "    return: List of actors who a signatories to the agreement in agreement_id\n",
+    "    \"\"\"\n",
+    "    agreement_index = pp_data_dict['pp_agreement_ids'].index(agreement_id)\n",
+    "    actor_ids = [pp_data_dict['pp_actor_ids'][i] for\\\n",
+    "                     i,v in enumerate(pp_data_dict['pp_matrix'][agreement_index]) if v > 0]\n",
+    "    return actor_ids\n",
+    "\n",
+    "def get_actor_name(actor_id,data_dict):\n",
+    "    \"\"\"\n",
+    "    Get the name of an actor\n",
+    "    param actor_id: actor ID\n",
+    "    param data_dict: Global data dictionary\n",
+    "    return: Name of actor\n",
+    "    \"\"\"\n",
+    "    return data_dict['vertices_dict'][actor_id][data_dict['nodes_header'].index('node_name')]\n",
+    "\n",
+    "def get_agreement_name(agreement_id,data_dict):\n",
+    "    \"\"\"\n",
+    "    Get the name of an agreement\n",
+    "    param agreement_id: agreement ID\n",
+    "    param data_dict: Global data dictionary\n",
+    "    return: Name of agreement\n",
+    "    \"\"\"\n",
+    "    return data_dict['vertices_dict'][agreement_id][data_dict['nodes_header'].index('node_name')]\n"
    ]
   },
   {
@@ -720,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {
     "scrolled": false
    },
@@ -794,17 +920,17 @@
       "IGO_437 World Bank\n",
       "\n",
       "Cosignatories of CON_4 organised by agreement\n",
-      "AGT_1030\n",
-      "['CON_11', 'CON_606', 'CON_637', 'IGO_49', 'IGO_438', 'CON_78', 'IGO_406', 'CON_14', 'CON_259', 'CON_7', 'CON_12', 'CON_228', 'CON_3', 'NGO_201', 'CON_611', 'CON_419', 'CON_169', 'CON_2', 'IGO_50', 'IGO_437', 'CON_602', 'CON_394', 'CON_10', 'CON_81', 'CON_589', 'CON_562', 'CON_0', 'CON_593', 'IGO_436', 'CON_21', 'CON_636', 'CON_603', 'CON_1', 'CON_52', 'CON_592', 'CON_82', 'CON_139', 'CON_171', 'IGO_640', 'CON_19', 'CON_20', 'CON_610', 'CON_294', 'CON_588', 'CON_202', 'CON_441', 'IGO_638', 'IGO_65', 'CON_4', 'CON_587', 'CON_395', 'IGO_639', 'CON_604']\n",
+      "AGT_1030 Conclusions of the Peace Implementation Conference held at Lancaster House (London Conference)\n",
+      "[('CON_11', 'Canada'), ('CON_606', 'Oman'), ('CON_637', 'Czechia'), ('IGO_49', 'United Nations (General)'), ('IGO_438', 'International Monetary Fund'), ('CON_78', 'Jordan'), ('IGO_406', 'North Atlantic Treaty Organization'), ('CON_14', 'Slovenia'), ('CON_259', 'Portugal'), ('CON_7', 'France'), ('CON_12', 'Malaysia'), ('CON_228', 'Morocco'), ('CON_3', 'United States'), ('NGO_201', 'International Committee of the Red Cross'), ('CON_611', 'Luxembourg'), ('CON_419', 'Saudi Arabia'), ('CON_169', 'Ireland'), ('CON_2', 'Germany'), ('IGO_50', 'Organization for Security and Cooperation in Europe'), ('IGO_437', 'World Bank'), ('CON_602', 'Hungary'), ('CON_394', 'Romania'), ('CON_10', 'Netherlands'), ('CON_81', 'Norway'), ('CON_589', 'Bulgaria'), ('CON_562', 'Turkey'), ('CON_0', 'Bosnia and Herzegovina'), ('CON_593', 'Sweden'), ('IGO_436', 'European Commission'), ('CON_21', 'Russia'), ('CON_636', 'Greece'), ('CON_603', 'Poland'), ('CON_1', 'Croatia'), ('CON_52', 'Ukraine'), ('CON_592', 'Slovakia'), ('CON_82', 'Egypt'), ('CON_139', 'Italy'), ('CON_171', 'Finland'), ('IGO_640', 'Office of the United Nations High Commissioner for Human Rights'), ('CON_19', 'United Kingdom'), ('CON_20', 'China'), ('CON_610', 'North Macedonia'), ('CON_294', 'Japan'), ('CON_588', 'Austria'), ('CON_202', 'Switzerland'), ('CON_441', 'Belgium'), ('IGO_638', 'European Bank for Reconstruction and Development'), ('IGO_65', 'High Commission for Refugees'), ('CON_4', 'Spain'), ('CON_587', 'Albania'), ('CON_395', 'Pakistan'), ('IGO_639', 'Council of Europe'), ('CON_604', 'Denmark')]\n",
       "\n",
-      "AGT_2\n",
-      "['IGO_5', 'CON_3', 'CON_2', 'CON_0', 'CON_1', 'CON_4']\n",
+      "AGT_2 Dayton Agreement on Implementing the Federation of Bosnia and Herzegovina, Dayton\n",
+      "[('IGO_5', 'European Union'), ('CON_3', 'United States'), ('CON_2', 'Germany'), ('CON_0', 'Bosnia and Herzegovina'), ('CON_1', 'Croatia'), ('CON_4', 'Spain')]\n",
       "\n",
-      "AGT_1624\n",
-      "['OTH_837', 'ARM_460', 'CON_0', 'CON_4', 'CON_604']\n",
+      "AGT_1624 Medjugorje Agreement \n",
+      "[('OTH_837', 'International Conference on the Former Yugoslavia'), ('ARM_460', 'Croatian Republic of Herzeg-Bosnia'), ('CON_0', 'Bosnia and Herzegovina'), ('CON_4', 'Spain'), ('CON_604', 'Denmark')]\n",
       "\n",
-      "AGT_1172\n",
-      "['CON_7', 'CON_3', 'CON_21', 'CON_19', 'CON_4']\n",
+      "AGT_1172 Text of US/Russia/UK/France/Spain Joint Action Programme (JAP) on Bosnia\n",
+      "[('CON_7', 'France'), ('CON_3', 'United States'), ('CON_21', 'Russia'), ('CON_19', 'United Kingdom'), ('CON_4', 'Spain')]\n",
       "\n",
       "\n",
       "Signatories of agreement AGT_1624\n",
@@ -834,81 +960,6 @@
     }
    ],
    "source": [
-    "def get_agreement_cosignatories(agreement_ids,pp_data_dict):\n",
-    "    # Given a list of agreements get the actors in common\n",
-    "    if len(agreement_ids) < 2:        \n",
-    "        return []\n",
-    "    for agreement_id in agreement_ids:\n",
-    "        if not agreement_id in pp_data_dict['pp_agreement_ids']:\n",
-    "            return []\n",
-    "    agreement_indices = [pp_data_dict['pp_agreement_ids'].index(agreement_id) for\\\n",
-    "                         agreement_id in agreement_ids]\n",
-    "    for i,agreement_index in enumerate(agreement_indices):\n",
-    "        row = pp_data_dict['pp_matrix'][agreement_index]\n",
-    "        if i == 0:\n",
-    "            actors_bitset = row\n",
-    "        else:\n",
-    "            actors_bitset = np.bitwise_and(actors_bitset,row)\n",
-    "    actor_ids = []\n",
-    "    for index,value in enumerate(actors_bitset): \n",
-    "        if value == 1:\n",
-    "            actor_ids.append(pp_data_dict['pp_actor_ids'][index])\n",
-    "    return actor_ids\n",
-    "\n",
-    "def get_consignatory_agreements(actor_ids,pp_data_dict):\n",
-    "    # Given a list of actors get the agreements in common\n",
-    "    if len(actor_ids) < 2:        \n",
-    "        return []\n",
-    "    for actor_id in actor_ids:\n",
-    "        if not actor_id in pp_data_dict['pp_actor_ids']:\n",
-    "            return []\n",
-    "    actor_indices = [pp_data_dict['pp_actor_ids'].index(actor_id) for actor_id in actor_ids]\n",
-    "    for i,actor_index in enumerate(actor_indices):\n",
-    "        row = pp_data_dict['pp_matrix'].T[actor_index]\n",
-    "        if i == 0:\n",
-    "            agreements_bitset = row\n",
-    "        else:\n",
-    "            agreements_bitset = np.bitwise_and(agreements_bitset,row)\n",
-    "    agreement_ids = []\n",
-    "    for index,value in enumerate(agreements_bitset): \n",
-    "        if value == 1:\n",
-    "            agreement_ids.append(pp_data_dict['pp_agreement_ids'][index])\n",
-    "    return agreement_ids\n",
-    "\n",
-    "def get_consignatories(actor_id,pp_data_dict):\n",
-    "    # Peace process cosignatories of a given agreement\n",
-    "    co_matrices = get_cooccurrence_matrices(pp_data_dict['pp_matrix'])\n",
-    "    actor_index = pp_data_dict['pp_actor_ids'].index(actor_id)\n",
-    "    cosign_ids = [pp_data_dict['pp_actor_ids'][i] for i,v in enumerate(co_matrices[0][actor_index]) if v > 0]\n",
-    "    return cosign_ids\n",
-    "\n",
-    "def get_coagreements(agreement_id,pp_data_dict):\n",
-    "    # Peace process agreements with signatories in common\n",
-    "    co_matrices = get_cooccurrence_matrices(pp_data_dict['pp_matrix'])\n",
-    "    agreement_index = pp_data_dict['pp_agreement_ids'].index(agreement_id)\n",
-    "    coagree_ids = [pp_data_dict['pp_agreement_ids'][i] for\\\n",
-    "                   i,v in enumerate(co_matrices[1][agreement_index]) if v > 0]\n",
-    "    return coagree_ids\n",
-    "\n",
-    "def get_agreements(actor_id,pp_data_dict):\n",
-    "    # Peace process agreements for an actor\n",
-    "    actor_index = pp_data_dict['pp_actor_ids'].index(actor_id)\n",
-    "    agreement_ids = [pp_data_dict['pp_agreement_ids'][i] for\\\n",
-    "                     i,v in enumerate(pp_data_dict['pp_matrix'][:,actor_index]) if v > 0]\n",
-    "    return agreement_ids\n",
-    "\n",
-    "def get_actors(agreement_id,pp_data_dict):\n",
-    "    # Peace process actors for an agreement \n",
-    "    agreement_index = pp_data_dict['pp_agreement_ids'].index(agreement_id)\n",
-    "    actor_ids = [pp_data_dict['pp_actor_ids'][i] for\\\n",
-    "                     i,v in enumerate(pp_data_dict['pp_matrix'][agreement_index]) if v > 0]\n",
-    "    return actor_ids\n",
-    "\n",
-    "def get_actor_name(actor_id,data_dict):\n",
-    "    return data_dict['vertices_dict'][actor_id][data_dict['nodes_header'].index('node_name')]\n",
-    "\n",
-    "def get_agreement_name(agreement_id,data_dict):\n",
-    "    return data_dict['vertices_dict'][agreement_id][data_dict['nodes_header'].index('node_name')]\n",
     "\n",
     "actor = 'CON_4'\n",
     "print('Agreements signed by',actor,get_actor_name(actor,data_dict))\n",
@@ -933,11 +984,11 @@
     "    agreements = get_consignatory_agreements([actor,cosign],pp_data_dict)\n",
     "    for agreement in agreements:\n",
     "        if agreement in agreement_cosign_dict:\n",
-    "            agreement_cosign_dict[agreement].append(cosign)\n",
+    "            agreement_cosign_dict[agreement].append((cosign,get_actor_name(cosign,data_dict)))\n",
     "        else:\n",
-    "            agreement_cosign_dict[agreement] = [cosign]\n",
+    "            agreement_cosign_dict[agreement] = [(cosign,get_actor_name(cosign,data_dict))]\n",
     "for agreement,actors in agreement_cosign_dict.items():\n",
-    "    print(agreement)\n",
+    "    print(agreement,get_agreement_name(agreement,data_dict))\n",
     "    print(actors)\n",
     "    print()\n",
     "print()\n",
