New UN doc and some gitignores

--- a/_doc/signatories_doc/signatories.tex
+++ b/_doc/signatories_doc/signatories.tex
@@ -27,7 +27,7 @@
 \titlespacing*{\paragraph}
 {0pt}{3.25ex plus 1ex minus .2ex}{1.5ex plus .2ex}
 
-\title{Peace Agreement Signatories Analysis}
+\title{A Method for the Analysis of the PA-X Agreement-Actor Signatories Dataset}
 \author{Roy Gardner}
 
 \begin{document}
