--- a/_doc/un_analysis/un_analysis.tex
+++ b/_doc/un_analysis/un_analysis.tex
@@ -245,7 +245,7 @@ United Nations Population Fund & 1 \\
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.38]{./assets/figure_3.png}
-\caption{Network diagram of UN co-signatories. The number of agreements signed by a pair of UN actors is the red number in the connection between the pair. Isolated nodes (known as singletons) have no UN co-signatories. See Table 5 for further information.}
+\caption{Network diagram of UN co-signatories. The number of agreements signed by a pair of UN actors is the red number in the connection between the pair. Isolated nodes (known as singletons) are UN actors with no UN co-signatories. See Table 5 for further information.}
 \end{center}
 \end{figure}
 
@@ -388,6 +388,10 @@ UNMISS (IGO\_831) \\
 
 
 \subsection{UN and non-UN co-signatories}
+
+\subsection{Case Study: United Nations (General) }
+
+The analysis described below can be applied to any actor.
 
 \end{document}
 
